# sql101

./: .gitignore  DEMO.md  README.md  README_CHATBOT.md  app.py  problem_1_duplicate_joins.py  problem_2_inefficient_groupby.py  problem_3_nested_subqueries.py  problem_4_create_indexes.py  problem_5_outer_join.py  pyproject.toml  requirements.txt  run_tutorial_demo.py  setup_database.py  sql_grader_agent.py  sql_optimization_tutorial.py
chatbot/: app.py  sql_grader_agent.py
data/: README.md
problems/: README.md  problem_1_duplicate_joins.py  problem_2_inefficient_groupby.py  problem_3_nested_subqueries.py  problem_4_create_indexes.py  problem_5_outer_join.py
utils/: README.md  sql_utils.py
